openvino_bindings/src/bindings.h

typedef void* CSpeechToText;
typedef void* CLLMInference;
typedef void* CTTIInference;
typedef struct {
    const char* id;
    const char* name;
} Device;
typedef struct {
    int id;
    const char* name;
    CameraResolution* resolutions;
    int size;
} CameraDevice;
typedef struct {
  float start_ts;
  float end_ts;
  const char* text;
} TranscriptionChunk;
typedef struct {
    enum StatusEnum status;
    const char* message;
} Status;
typedef struct {
    enum StatusEnum status;
    const char* message;
    const char* value;
} StatusOrString;
typedef struct {
    enum StatusEnum status;
    const char* message;
    bool value;
} StatusOrBool;
typedef struct {
    enum StatusEnum status;
    const char* message;
    int value;
} StatusOrInt;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CSpeechToText value;
} StatusOrSpeechToText;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CLLMInference value;
} StatusOrLLMInference;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CLLMInference value;
} StatusOrTTIInference;
typedef struct {
    enum StatusEnum status;
    const char* message;
    Metrics metrics;
    const char* value;
} StatusOrModelResponse;
typedef struct {
    enum StatusEnum status;
    const char* message;
    Metrics metrics;
    TranscriptionChunk* value;
    int size;
    const char* text;
} StatusOrWhisperModelResponse;
typedef struct {
    enum StatusEnum status;
    const char* message;
    TTIMetrics metrics;
    const char* value;
    int step;
    int num_step;
} StatusOrTTIModelResponse;
typedef struct {
    enum StatusEnum status;
    const char* message;
    float* value;
    int size;
} StatusOrEmbeddings;
typedef struct {
    enum StatusEnum status;
    const char* message;
    Device* value;
    int size;
} StatusOrDevices;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CameraDevice* value;
    int size;
} StatusOrCameraDevices;
typedef void (*TTIInferenceCallbackFunction)(StatusOrTTIModelResponse*);
typedef void (*LLMInferenceCallbackFunction)(StatusOrString*);
EXPORT void freeStatus(Status *status);
EXPORT void freeStatusOrString(StatusOrString *status);
EXPORT void freeStatusOrInt(StatusOrInt *status);
EXPORT void freeStatusOrLLMInference(StatusOrLLMInference *status);
EXPORT void freeStatusOrSpeechToText(StatusOrSpeechToText *status);
EXPORT void freeStatusOrModelResponse(StatusOrModelResponse *status);
EXPORT void freeStatusOrWhisperModelResponse(StatusOrWhisperModelResponse *status);
EXPORT void freeStatusOrTTIModelResponse(StatusOrTTIModelResponse *status);
EXPORT void freeStatusOrDevices(StatusOrDevices *status);
EXPORT void freeStatusOrEmbeddings(StatusOrEmbeddings *status);
EXPORT void freeStatusOrCameraDevices(StatusOrCameraDevices *status);
EXPORT StatusOrLLMInference* llmInferenceOpen(const char* model_path, const char* device);
EXPORT Status* llmInferenceSetListener(CLLMInference instance, LLMInferenceCallbackFunction callback);
EXPORT StatusOrModelResponse* llmInferencePrompt(CLLMInference instance, const char* message, bool apply_template, float temperature, float top_p);
EXPORT Status* llmInferenceClearHistory(CLLMInference instance);
EXPORT Status* llmInferenceForceStop(CLLMInference instance);
EXPORT StatusOrString* llmInferenceGetTokenizerConfig(CLLMInference instance);
EXPORT Status* llmInferenceClose(CLLMInference instance);
EXPORT StatusOrTTIInference* ttiInferenceOpen(const char* model_path, const char* device);
EXPORT StatusOrTTIModelResponse* ttiInferencePrompt(CTTIInference instance, const char* message, int width, int height, int rounds);
EXPORT Status* ttiInferenceSetListener(CTTIInference instance, TTIInferenceCallbackFunction callback);
EXPORT StatusOrBool* ttiInferenceHasModelIndex(CTTIInference instance);