lib/interop/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;
import 'package:ffi/ffi.dart' as pkg_ffi;

class OpenVINO {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  OpenVINO(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  OpenVINO.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void freeStatus(
    ffi.Pointer<Status> status,
  ) {
    return _freeStatus(
      status,
    );
  }

  late final _freeStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<Status>)>>(
          'freeStatus');
  late final _freeStatus =
      _freeStatusPtr.asFunction<void Function(ffi.Pointer<Status>)>();

  void freeStatusOrString(
    ffi.Pointer<StatusOrString> status,
  ) {
    return _freeStatusOrString(
      status,
    );
  }

  late final _freeStatusOrStringPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<StatusOrString>)>>(
      'freeStatusOrString');
  late final _freeStatusOrString = _freeStatusOrStringPtr
      .asFunction<void Function(ffi.Pointer<StatusOrString>)>();

  void freeStatusOrInt(
    ffi.Pointer<StatusOrInt> status,
  ) {
    return _freeStatusOrInt(
      status,
    );
  }

  late final _freeStatusOrIntPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<StatusOrInt>)>>(
          'freeStatusOrInt');
  late final _freeStatusOrInt =
      _freeStatusOrIntPtr.asFunction<void Function(ffi.Pointer<StatusOrInt>)>();

  void freeStatusOrLLMInference(
    ffi.Pointer<StatusOrLLMInference> status,
  ) {
    return _freeStatusOrLLMInference(
      status,
    );
  }

  late final _freeStatusOrLLMInferencePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<StatusOrLLMInference>)>>('freeStatusOrLLMInference');
  late final _freeStatusOrLLMInference = _freeStatusOrLLMInferencePtr
      .asFunction<void Function(ffi.Pointer<StatusOrLLMInference>)>();

  void freeStatusOrSpeechToText(
    ffi.Pointer<StatusOrSpeechToText> status,
  ) {
    return _freeStatusOrSpeechToText(
      status,
    );
  }

  late final _freeStatusOrSpeechToTextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<StatusOrSpeechToText>)>>('freeStatusOrSpeechToText');
  late final _freeStatusOrSpeechToText = _freeStatusOrSpeechToTextPtr
      .asFunction<void Function(ffi.Pointer<StatusOrSpeechToText>)>();

  void freeStatusOrModelResponse(
    ffi.Pointer<StatusOrModelResponse> status,
  ) {
    return _freeStatusOrModelResponse(
      status,
    );
  }

  late final _freeStatusOrModelResponsePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<StatusOrModelResponse>)>>(
      'freeStatusOrModelResponse');
  late final _freeStatusOrModelResponse = _freeStatusOrModelResponsePtr
      .asFunction<void Function(ffi.Pointer<StatusOrModelResponse>)>();

  void freeStatusOrWhisperModelResponse(
    ffi.Pointer<StatusOrWhisperModelResponse> status,
  ) {
    return _freeStatusOrWhisperModelResponse(
      status,
    );
  }

  late final _freeStatusOrWhisperModelResponsePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<StatusOrWhisperModelResponse>)>>(
      'freeStatusOrWhisperModelResponse');
  late final _freeStatusOrWhisperModelResponse =
      _freeStatusOrWhisperModelResponsePtr.asFunction<
          void Function(ffi.Pointer<StatusOrWhisperModelResponse>)>();

  void freeStatusOrTTIModelResponse(
    ffi.Pointer<StatusOrTTIModelResponse> status,
  ) {
    return _freeStatusOrTTIModelResponse(
      status,
    );
  }

  late final _freeStatusOrTTIModelResponsePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<StatusOrTTIModelResponse>)>>(
      'freeStatusOrTTIModelResponse');
  late final _freeStatusOrTTIModelResponse = _freeStatusOrTTIModelResponsePtr
      .asFunction<void Function(ffi.Pointer<StatusOrTTIModelResponse>)>();

  void freeStatusOrDevices(
    ffi.Pointer<StatusOrDevices> status,
  ) {
    return _freeStatusOrDevices(
      status,
    );
  }

  late final _freeStatusOrDevicesPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<StatusOrDevices>)>>(
      'freeStatusOrDevices');
  late final _freeStatusOrDevices = _freeStatusOrDevicesPtr
      .asFunction<void Function(ffi.Pointer<StatusOrDevices>)>();

  void freeStatusOrEmbeddings(
    ffi.Pointer<StatusOrEmbeddings> status,
  ) {
    return _freeStatusOrEmbeddings(
      status,
    );
  }

  late final _freeStatusOrEmbeddingsPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<StatusOrEmbeddings>)>>(
      'freeStatusOrEmbeddings');
  late final _freeStatusOrEmbeddings = _freeStatusOrEmbeddingsPtr
      .asFunction<void Function(ffi.Pointer<StatusOrEmbeddings>)>();

  void freeStatusOrCameraDevices(
    ffi.Pointer<StatusOrCameraDevices> status,
  ) {
    return _freeStatusOrCameraDevices(
      status,
    );
  }

  late final _freeStatusOrCameraDevicesPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<StatusOrCameraDevices>)>>(
      'freeStatusOrCameraDevices');
  late final _freeStatusOrCameraDevices = _freeStatusOrCameraDevicesPtr
      .asFunction<void Function(ffi.Pointer<StatusOrCameraDevices>)>();

  ffi.Pointer<StatusOrLLMInference> llmInferenceOpen(
    ffi.Pointer<pkg_ffi.Utf8> model_path,
    ffi.Pointer<pkg_ffi.Utf8> device,
  ) {
    return _llmInferenceOpen(
      model_path,
      device,
    );
  }

  late final _llmInferenceOpenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<StatusOrLLMInference> Function(ffi.Pointer<pkg_ffi.Utf8>,
              ffi.Pointer<pkg_ffi.Utf8>)>>('llmInferenceOpen');
  late final _llmInferenceOpen = _llmInferenceOpenPtr.asFunction<
      ffi.Pointer<StatusOrLLMInference> Function(
          ffi.Pointer<pkg_ffi.Utf8>, ffi.Pointer<pkg_ffi.Utf8>)>();

  ffi.Pointer<Status> llmInferenceSetListener(
    CLLMInference instance,
    LLMInferenceCallbackFunction callback,
  ) {
    return _llmInferenceSetListener(
      instance,
      callback,
    );
  }

  late final _llmInferenceSetListenerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Status> Function(CLLMInference,
              LLMInferenceCallbackFunction)>>('llmInferenceSetListener');
  late final _llmInferenceSetListener = _llmInferenceSetListenerPtr.asFunction<
      ffi.Pointer<Status> Function(
          CLLMInference, LLMInferenceCallbackFunction)>();

  ffi.Pointer<StatusOrModelResponse> llmInferencePrompt(
    CLLMInference instance,
    ffi.Pointer<pkg_ffi.Utf8> message,
    bool apply_template,
    double temperature,
    double top_p,
  ) {
    return _llmInferencePrompt(
      instance,
      message,
      apply_template,
      temperature,
      top_p,
    );
  }

  late final _llmInferencePromptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<StatusOrModelResponse> Function(
              CLLMInference,
              ffi.Pointer<pkg_ffi.Utf8>,
              ffi.Bool,
              ffi.Float,
              ffi.Float)>>('llmInferencePrompt');
  late final _llmInferencePrompt = _llmInferencePromptPtr.asFunction<
      ffi.Pointer<StatusOrModelResponse> Function(
          CLLMInference, ffi.Pointer<pkg_ffi.Utf8>, bool, double, double)>();

  ffi.Pointer<Status> llmInferenceClearHistory(
    CLLMInference instance,
  ) {
    return _llmInferenceClearHistory(
      instance,
    );
  }

  late final _llmInferenceClearHistoryPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Status> Function(CLLMInference)>>(
          'llmInferenceClearHistory');
  late final _llmInferenceClearHistory = _llmInferenceClearHistoryPtr
      .asFunction<ffi.Pointer<Status> Function(CLLMInference)>();

  ffi.Pointer<Status> llmInferenceForceStop(
    CLLMInference instance,
  ) {
    return _llmInferenceForceStop(
      instance,
    );
  }

  late final _llmInferenceForceStopPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Status> Function(CLLMInference)>>(
          'llmInferenceForceStop');
  late final _llmInferenceForceStop = _llmInferenceForceStopPtr
      .asFunction<ffi.Pointer<Status> Function(CLLMInference)>();

  ffi.Pointer<StatusOrString> llmInferenceGetTokenizerConfig(
    CLLMInference instance,
  ) {
    return _llmInferenceGetTokenizerConfig(
      instance,
    );
  }

  late final _llmInferenceGetTokenizerConfigPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<StatusOrString> Function(CLLMInference)>>(
      'llmInferenceGetTokenizerConfig');
  late final _llmInferenceGetTokenizerConfig =
      _llmInferenceGetTokenizerConfigPtr
          .asFunction<ffi.Pointer<StatusOrString> Function(CLLMInference)>();

  ffi.Pointer<Status> llmInferenceClose(
    CLLMInference instance,
  ) {
    return _llmInferenceClose(
      instance,
    );
  }

  late final _llmInferenceClosePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Status> Function(CLLMInference)>>(
          'llmInferenceClose');
  late final _llmInferenceClose = _llmInferenceClosePtr
      .asFunction<ffi.Pointer<Status> Function(CLLMInference)>();

  ffi.Pointer<StatusOrTTIInference> ttiInferenceOpen(
    ffi.Pointer<pkg_ffi.Utf8> model_path,
    ffi.Pointer<pkg_ffi.Utf8> device,
  ) {
    return _ttiInferenceOpen(
      model_path,
      device,
    );
  }

  late final _ttiInferenceOpenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<StatusOrTTIInference> Function(ffi.Pointer<pkg_ffi.Utf8>,
              ffi.Pointer<pkg_ffi.Utf8>)>>('ttiInferenceOpen');
  late final _ttiInferenceOpen = _ttiInferenceOpenPtr.asFunction<
      ffi.Pointer<StatusOrTTIInference> Function(
          ffi.Pointer<pkg_ffi.Utf8>, ffi.Pointer<pkg_ffi.Utf8>)>();

  ffi.Pointer<StatusOrTTIModelResponse> ttiInferencePrompt(
    CTTIInference instance,
    ffi.Pointer<pkg_ffi.Utf8> message,
    int width,
    int height,
    int rounds,
  ) {
    return _ttiInferencePrompt(
      instance,
      message,
      width,
      height,
      rounds,
    );
  }

  late final _ttiInferencePromptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<StatusOrTTIModelResponse> Function(
              CTTIInference,
              ffi.Pointer<pkg_ffi.Utf8>,
              ffi.Int,
              ffi.Int,
              ffi.Int)>>('ttiInferencePrompt');
  late final _ttiInferencePrompt = _ttiInferencePromptPtr.asFunction<
      ffi.Pointer<StatusOrTTIModelResponse> Function(
          CTTIInference, ffi.Pointer<pkg_ffi.Utf8>, int, int, int)>();

  ffi.Pointer<Status> ttiInferenceSetListener(
    CTTIInference instance,
    TTIInferenceCallbackFunction callback,
  ) {
    return _ttiInferenceSetListener(
      instance,
      callback,
    );
  }

  late final _ttiInferenceSetListenerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Status> Function(CTTIInference,
              TTIInferenceCallbackFunction)>>('ttiInferenceSetListener');
  late final _ttiInferenceSetListener = _ttiInferenceSetListenerPtr.asFunction<
      ffi.Pointer<Status> Function(
          CTTIInference, TTIInferenceCallbackFunction)>();

  ffi.Pointer<StatusOrBool> ttiInferenceHasModelIndex(
    CTTIInference instance,
  ) {
    return _ttiInferenceHasModelIndex(
      instance,
    );
  }

  late final _ttiInferenceHasModelIndexPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<StatusOrBool> Function(CTTIInference)>>(
      'ttiInferenceHasModelIndex');
  late final _ttiInferenceHasModelIndex = _ttiInferenceHasModelIndexPtr
      .asFunction<ffi.Pointer<StatusOrBool> Function(CTTIInference)>();
